Fix flickering and call-summary table

--- a/src/styles/components/section.scss
+++ b/src/styles/components/section.scss
@@ -194,6 +194,10 @@
     }
   }
 
+  &__sidebar-in-wrapper {
+    min-height: 54px;
+  }
+
   &__sidebar-in {
     background: $white;
 
